# php-lsp

./: .gitignore  Cargo.toml  README.md  prompt.md  setup-multi-agent.sh  setup-php-lsp.sh
.ai/: prompt-qwen.md  prompts-claude.md
.scripts/: add-dep.sh  build-extension.sh  install-lsp.sh  regen-docs.sh
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
crates/php-lsp/: Cargo.toml
crates/php-lsp/src/: lib.rs  main.rs
crates/php-lsp/src/server/: mod.rs
crates/zed-php-lsp/: Cargo.toml  extension.toml
crates/zed-php-lsp/src/: lib.rs
history/prompts/001-core-lsp-infrastructure/: 0001-core-lsp-infrastructure-spec.spec.prompt.md
history/prompts/002-symbol-navigation/: 0001-symbol-navigation-spec.spec.prompt.md  0002-symbol-navigation-plan.plan.prompt.md  0003-commit-and-pr-symbol-navigation-plan.misc.prompt.md
history/prompts/constitution/: 0001-initial-php-lsp-constitution.constitution.prompt.md  1-update-php-lsp-constitution.constitution.prompt.md
specs/001-core-lsp-infrastructure/: plan.md  spec.md
specs/001-core-lsp-infrastructure/checklists/: requirements.md
specs/002-symbol-navigation/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/002-symbol-navigation/checklists/: requirements.md
