[package]
name = "php-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
async-lsp = { version = "0.2.2", features = ["tokio"] }
tree-sitter = "0.25.10"
tree-sitter-php = "0.24.2"
tokio = { version = "1", features = ["full"] }
lsp-types = "0.97"
ropey = "1.6"
dashmap = "6"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
